Fix navdropdown alignment and size on mobile

--- a/packages/ui/src/components/nav-dropdown-item/nav-dropdown-item.css
+++ b/packages/ui/src/components/nav-dropdown-item/nav-dropdown-item.css
@@ -1,5 +1,5 @@
 .wv_nav-dropdown-item {
-  @apply border-none cursor-pointer px-3 py-2 flex justify-center md:justify-start whitespace-nowrap;
+  @apply w-full border-none cursor-pointer px-3 py-2 flex justify-center md:justify-start whitespace-nowrap;
 }
 
 .wv_nav-dropdown-item--white {
